dhall/tests/type-errors/unit/AssertAlphaTrap.txt
 --> 1:47
  |
1 | assert : (\(_: Bool) -> _) === (\(x: Bool) -> _)âŠ
  |                                               ^
  |
  = Type error: Unbound variable
